# richmd

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  richmd.desktop
.github/workflows/: build.yml
flatpak/: com.devmindscape.richmd.yaml
macos/: dmg-setup.applescript
src/: Info.plist  main.cpp  md_frame.cpp  md_frame.h  resources.rc.in
